fixed invisible contact info

--- a/master.css
+++ b/master.css
@@ -44,7 +44,7 @@ section {
 }
 
 a:link {
-    color: var(--color3);
+    color: var(--color1);
 }
 
 a:hover {
@@ -132,7 +132,7 @@ a:visited {
 }
 
 .employment {
-    border: 5px solid black;
+    border: 5px solid var(--color5);
     padding: 15px 15px;
     margin: 20px 0px;
     text-align: justify;
